# kraken_bot

./: .env.example  Cargo.toml  README.md  env_example.rs  example_symbols_config.json
src/: kraken_execute_simple_strategy.rs  kraken_execute_strategy.rs  kraken_execute_trade.rs  kraken_pos.rs  main.rs  telegram.rs
