[package]
name = "kraken_bot"
version = "0.1.1"
edition = "2021"

[dependencies]
log = "0.4"
env_logger = "0.10"  # Optional: for initializing the logger
telegram-bot = { path = "../telegram-bot" }
teloxide = { version = "0.17", features = ["macros"] }
kraken-async-rs = "0.8"
#polars = "0.46.0"
reqwest = { version = "0.12", features = ["json"] }
rust_decimal = { version = "1.36", features = ["serde-float"] }
rust_decimal_macros = "1.29.1"
serde = { version = "1", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
tokio-stream = { version = "0.1", features = ["full"] }
tracing = "0.1.41"
futures = "0.3"
chrono = "0.4"
dotenvy = "0.15"
async-trait = "0.1"
